tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@macro_import_same_namespace.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/macro_import_same_namespace.txt
---
 Syntax error --> [macro_import_same_namespace.txt:2:28]
  |
2 | {% import "macros2.html" as macros %}
  |                             ^---
  = Multiple macros imports using the `macros` namespace
